correction fontColor Collapse

--- a/src/components/collapse/collapseAbout/_collapseAbout.scss
+++ b/src/components/collapse/collapseAbout/_collapseAbout.scss
@@ -9,7 +9,7 @@
     .collapseContent {
         margin: calc(20px + (30 - 20) * ((100vw - 320px) / (1920 - 320))) 0;
         .contentAbout{
-            color: $color-3;
+            color: $color-1;
             font-size: calc(13px + (20 - 13) * ((100vw - 320px) / (1920 - 320)));
             max-height: 0;
             transition: 0.4s;
@@ -40,11 +40,11 @@
         cursor: pointer;
         .arrowIcon {
             background: transparent;
-            transition: transform 0.4s ease-in-out;
+            transition: transform 0.3s ease-in-out;
         }
     }
 }
 
 .rotate180 {
-    transform: rotate(180deg);
+    transform: rotate(-180deg);
 }
