--- a/src/components/collapse/collapseInfoLogement/_collapseInfoLogement.scss
+++ b/src/components/collapse/collapseInfoLogement/_collapseInfoLogement.scss
@@ -53,7 +53,7 @@
             }
     
             .rotate180 {
-                transform: rotate(180deg);
+                transform: rotate(-180deg);
     
             }
 
@@ -61,7 +61,7 @@
 
 
         .contentAbout {
-            color: $color-3;
+            color: $color-1;
             font-size: calc(13px + (20 - 13) * ((100vw - 320px) / (1920 - 320)));
             height: 0px;
             overflow: hidden;
